# LibSL

./: .gitignore  .gitmodules  CMakeLists.txt  CREDITS.txt  DEPRECATED.txt  README.md  libsl-config.cmake  make_binary_distrib_win32.bat  make_source_distrib.bat
src/: CMakeLists.txt
src/LibSL/: CMakeLists.txt  LibSL.config.h.in  LibSL.cpp  LibSL.h  LibSL.image.h  LibSL.main.h  LibSL.math.h  LibSL.memory.h  LibSL.precompiled.h  LibSL_d3d.h  LibSL_dx10.h  LibSL_gl.config.h.in  LibSL_gl.gpumesh.h  LibSL_gl.gputex.h  LibSL_gl.h  LibSL_gl.main.h  LibSL_gl.ui.h  LibSL_gl4.h  LibSL_gl4core.h  LibSL_linalg.h
src/LibSL/ArrayHelpers/: ArrayHelpers.cpp  ArrayHelpers.h
src/LibSL/CgHelpers/: CgFillArray2D.cpp  CgFillArray2D.h  CgHelpers.cpp  CgHelpers.h  CgImageProcessing.cg  CgImageProcessing.cpp  CgImageProcessing.h  CgImageProcessing.string
src/LibSL/CppHelpers/: BasicParser.h  CppHelpers.cpp  CppHelpers.h
src/LibSL/D3DHelpers/: D3DHelpers.cpp  D3DHelpers.h  D3DQuad.cpp  D3DQuad.h  FxHelpers.h  FxHelpers_dx10_policy.h  FxHelpers_dx9_policy.h  FxImageProcessing.cpp  FxImageProcessing.fx  FxImageProcessing.h
src/LibSL/DataStructures/: Graph.h  GraphAlgorithms.h  GraphRndCut.h  Hierarchy.h  OccupancyMap.h  Pod.h  Pow2Tree.h
src/LibSL/Errors/: Errors.h
src/LibSL/GLHelpers/: AutoBindShader.cpp  AutoBindShader.h  GLBasicPipeline.cpp  GLBasicPipeline.h  GLHelpers.cpp  GLHelpers.h  Triangulate.cpp  Triangulate.h
src/LibSL/GPUHelpers/: Font.cpp  Font.h  GPUHelpers.cpp  GPUHelpers.h  GPUHelpers_d3d.h  GPUHelpers_gl.h  Profiler.cpp  Profiler.h  Shapes.cpp  Shapes.h  basefont.h
src/LibSL/GPUMesh/: GPUMesh.h  GPUMesh_CompilePolicy_D3D.h  GPUMesh_CompilePolicy_GL4_VBO.h  GPUMesh_CompilePolicy_GLES_VBO.h  GPUMesh_CompilePolicy_GL_Calls.h  GPUMesh_CompilePolicy_GL_DisplayList.h  GPUMesh_CompilePolicy_GL_VBO.h  GPUMesh_CompilePolicy_dx10.h  GPUMesh_D3D_SortTypelist.h  GPUMesh_D3D_types.h  GPUMesh_GL_funcs.h  GPUMesh_GL_types.h  GPUMesh_VertexStorage.h  GPUMesh_d3d.h  GPUMesh_dx10.h  GPUMesh_gl.h  GPUMesh_gl4.h  GPUMesh_primitives.h
src/LibSL/GPUTex/: GPUTex.h  GPUTex_CompilePolicy_D3D.h  GPUTex_CompilePolicy_GL.h  GPUTex_CompilePolicy_GL4.h  GPUTex_CompilePolicy_dx10.h  GPUTex_D3D_formats.h  GPUTex_GL4_formats.h  GPUTex_GL_formats.h  GPUTex_GL_types.h  GPUTex_d3d.h  GPUTex_dx10.h  GPUTex_dx10_formats.h  GPUTex_gl.h  GPUTex_stdfmt.h
src/LibSL/Geometry/: AAB.h  Bezier.h  BezierCurve.h  BezierCurve.inl  Brush.h  Components.cpp  Components.h  Contour.cpp  Contour.h  ConvexHull.cpp  ConvexHull.h  ImplicitShape.cpp  ImplicitShape.h  LookUpTable.h  MarchingCubes.cpp  MarchingCubes.h  Morpho.cpp  Morpho.h  Plane.h  PointTree.cpp  PointTree.h  Polygon.h  VoxelTools.h  Voxelizer.cpp  Voxelizer.h
src/LibSL/Image/: DistanceField.cpp  DistanceField.h  GradientPaste.h  Image.cpp  Image.h  ImageFormat_JPG.cpp  ImageFormat_PNG.cpp  ImageFormat_PNG.h  ImageFormat_TGA.cpp  ImageFormat_dds.cpp  ImageFormat_dds.h  ImageFormat_float.cpp  ImageFormat_float.h  ImageFormat_half.cpp  ImageFormat_half.h  ImageFormat_pfm.cpp  ImageFormat_pfm.h  PushPull.h  tga.cpp  tga.h
src/LibSL/LinAlg/: LeastSquareSolver.h  LinearSolver.h  PCA.cpp  PCA.h  SparseMatrix.h  TaucsHelpers.cpp  TaucsHelpers.h
src/LibSL/Math/: Frame.h  Histogram.h  LBGClustering.h  LloydClustering.h  LloydClusteringOnQuantized.h  Matrix4x4.h  Stats.h  Tuple.h  floatN.h
src/LibSL/Memory/: Array.h  Array2D.h  ArrayND.h  ArrayRemap.cpp  ArrayRemap.h  ArrayTools.h  Cache.h  Pointer.h  TraceLeaks.cpp  TraceLeaks.h
src/LibSL/Mesh/: AnimatedMesh.cpp  AnimatedMesh.h  AnimatedMeshCgRenderer.cpp  AnimatedMeshCgRenderer.h  AnimatedMeshController.cpp  AnimatedMeshController.h  AnimatedMeshFormat_animesh.cpp  AnimatedMeshFormat_animesh.h  AnimatedMeshFxRenderer.cpp  AnimatedMeshFxRenderer.h  AnimatedMeshGLSLRenderer.cpp  AnimatedMeshGLSLRenderer.h  Mesh.cpp  Mesh.h  MeshEditing.cpp  MeshEditing.h  MeshFormat_3DS.cpp  MeshFormat_3DS.h  MeshFormat_OBJ.cpp  MeshFormat_OBJ.h  MeshFormat_dae.cpp  MeshFormat_dae.h  MeshFormat_map.cpp  MeshFormat_map.h  MeshFormat_mesh.cpp  MeshFormat_mesh.h  MeshFormat_msh.cpp  MeshFormat_msh.h  MeshFormat_off.cpp  MeshFormat_off.h  MeshFormat_ply.cpp  MeshFormat_ply.h  MeshFormat_proc.cpp  MeshFormat_proc.h  MeshFormat_stl.cpp  MeshFormat_wrl.cpp  MeshFormat_wrl.h  MeshRenderer.h  TexturedMeshRenderer.h  VertexFormat_dynamic.cpp  (+2 more)
src/LibSL/StlHelpers/: StlHelpers.cpp  StlHelpers.h
src/LibSL/SvgHelpers/: SvgHelpers.cpp  SvgHelpers.h
src/LibSL/System/: System.cpp  System.h  Types.h  half.cpp  half.h
src/LibSL/TemplateHelpers/: ExecuteOnTypeList.h  TemplateHelpers.h
src/LibSL/UIHelpers/: BindAntTweakBar.cpp  BindAntTweakBar.h  BindImGui.cpp  BindImGui.h  Manipulator.cpp  Manipulator.h  SimpleUI.cpp  SimpleUI.h  SimpleUI_glfw.cpp  SimpleUI_glut.cpp  SimpleUI_win_d3d.cpp  SimpleUI_win_gl.cpp  StyleManager.cpp  StyleManager.h  Trackball.cpp  Trackball.h  TrackballUI.cpp  TrackballUI.h
src/LibSL/Win32Helpers/: TrueType.cpp  TrueType.h  Win32Helpers.cpp  Win32Helpers.h
src/LibSL_sharp/: CMakeLists.txt
src/LibSL_sharp/C#/: GlPanel.cs  GlPanel.designer.cs  GlPanel.resx  LibSL_sharp.csproj.template  PropertySheet.cs  SlidingPanel.cs  SlidingPanel.designer.cs
src/libs/src/: CMakeLists.txt  README.txt
src/tests/: CMakeLists.txt  Makefile  TestLibSL.cpp  TestLibSL.h  precompiled.cpp  precompiled.h  test_aab.cpp  test_brush.cpp  test_contour.cpp  test_datastructures.cpp  test_graph.cpp  test_hermitcurve.cpp  test_image.cpp  test_lloyd.cpp  test_math.cpp  test_memory.cpp  test_memory_perf.cpp  test_memory_perf.h  test_mesh.cpp  test_polygon.cpp  test_quadtree.cpp  test_sh.cpp  test_sh.fp  test_sh.vp  test_sh_gl.cpp  test_sh_gl.fp  test_sh_gl.vp  test_sh_gl4core.cpp  test_sh_gl4core.fp  test_sh_gl4core.vp  test_sh_gl_ems.cpp  test_sh_gl_ems.fp  test_sh_gl_ems.vp  test_system.cpp
src/tests/emscripten/: CMakeLists.txt  test1.cpp  test1.fp  test1.vp
src/tools/: CMakeLists.txt  code2string.pl
src/tools/BlenderImportExport/: Export Animated Meshes from Blender to LibSL.txt  LibSLExport.py  (+1 more)
src/tutorials/: CMakeLists.txt
(+405 files in other folders)
