CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

# MESSAGE(STATUS "[in LibSL/src/]")

if (NOT DEFINED CMAKE_BUILD_TYPE)
if(LIBSL_BUILD_DEBUG)
SET(CMAKE_BUILD_TYPE Debug)
else(LIBSL_BUILD_DEBUG)
SET(CMAKE_BUILD_TYPE Release)
endif(LIBSL_BUILD_DEBUG)
endif()

ADD_SUBDIRECTORY(libs/src)
ADD_SUBDIRECTORY(LibSL)

if(LIBSL_BUILD_SHARP)
ADD_SUBDIRECTORY(LibSL_sharp)
endif(LIBSL_BUILD_SHARP)

if(NOT EMSCRIPTEN)
ADD_SUBDIRECTORY(tools)
endif(NOT EMSCRIPTEN)

# ADD_SUBDIRECTORY(tests)

if(LIBSL_BUILD_TUTORIALS)
# ADD_SUBDIRECTORY(tutorials)
endif(LIBSL_BUILD_TUTORIALS)

if(EMSCRIPTEN)
# ADD_SUBDIRECTORY(tests/emscripten)
endif(EMSCRIPTEN)
