CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

# MESSAGE(STATUS "[in LibSL/src/]")

if (NOT DEFINED CMAKE_BUILD_TYPE)
if(LIBSL_BUILD_DEBUG)
SET(CMAKE_BUILD_TYPE Debug)
else(LIBSL_BUILD_DEBUG)
SET(CMAKE_BUILD_TYPE Release)
endif(LIBSL_BUILD_DEBUG)
endif()

ADD_SUBDIRECTORY(libs/src)
ADD_SUBDIRECTORY(LibSL)

if(LIBSL_BUILD_SHARP)
ADD_SUBDIRECTORY(LibSL_sharp)
endif(LIBSL_BUILD_SHARP)

if(LIBSL_BUILD_TOOLS)
if(NOT EMSCRIPTEN)
if(NOT ANDROID)
ADD_SUBDIRECTORY(tools)
endif(NOT ANDROID)
endif(NOT EMSCRIPTEN)
endif(LIBSL_BUILD_TOOLS)

if(LIBSL_BUILD_TESTS)
ADD_SUBDIRECTORY(tests)
endif(LIBSL_BUILD_TESTS)

if(LIBSL_BUILD_TUTORIALS)
ADD_SUBDIRECTORY(tutorials)
endif(LIBSL_BUILD_TUTORIALS)
