cmake_minimum_required(VERSION 2.6)

# MESSAGE(STATUS "[in LibSL/src/LibSL_sharp/]")

include_directories(
	${LIBSL_INCLUDE_DIR}
	${CMAKE_CURRENT_SOURCE_DIR}/GLPanel/C++/
	)

set(GLBINDER_SOURCE
	GLPanel/C++/GLPanelBinder.cpp
)

ADD_DEFINITIONS(-DUSE_GLUX)

ADD_LIBRARY(LibSL_sharp_binder SHARED ${GLBINDER_SOURCE})

SET_TARGET_PROPERTIES(LibSL_sharp_binder PROPERTIES COMPILE_FLAGS -DGLPANELBINDER_EXPORTS)

target_link_libraries(LibSL_sharp_binder LibSL LibSL_gl4)

SET_PROPERTY(TARGET LibSL_sharp_binder APPEND PROPERTY
   INTERFACE_INCLUDE_DIRECTORIES
	${CMAKE_CURRENT_SOURCE_DIR}/GLPanel/C++/
)

INSTALL(TARGETS LibSL_sharp_binder
	RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/lib
	LIBRARY DESTINATION ${CMAKE_SOURCE_DIR}/lib
	ARCHIVE DESTINATION ${CMAKE_SOURCE_DIR}/lib
)

SET_TARGET_PROPERTIES(LibSL_sharp_binder PROPERTIES DEBUG_POSTFIX "-d")

# Fixed GUID to allow client projects to refer to LibSL_sharp
set(LIBSLSHARP-GUID 5731917B-5759-4566-8B93-5184DA4C3CDC CACHE INTERNAL "LIBSLSHARP-GUID")

if(CMAKE_SIZEOF_VOID_P EQUAL 8)
    set(DOTNET_PLATFORM x64)
elseif(CMAKE_SIZEOF_VOID_P EQUAL 4)
    set(DOTNET_PLATFORM x86)
endif()
configure_file(
	"${CMAKE_CURRENT_SOURCE_DIR}/C#/LibSL_sharp.csproj.template"
	"${CMAKE_CURRENT_SOURCE_DIR}/C#/LibSL_sharp.csproj"
	)

include_external_msproject(LibSL_sharp
	"${CMAKE_CURRENT_SOURCE_DIR}/C#/LibSL_sharp.csproj"
	TYPE FAE04EC0-301F-11D3-BF4B-00C04F79EFBC
	PLATFORM "${DOTNET_PLATFORM}"
	)
