CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(LibSL_tutorials)

# ADD_SUBDIRECTORY(TrackballUI)
# ADD_SUBDIRECTORY(Mesh)
# ADD_SUBDIRECTORY(AutoBindShader)
# ADD_SUBDIRECTORY(gl4x)

# ADD_SUBDIRECTORY(Font) # JD: Does not compile on linux
ADD_SUBDIRECTORY(imgui)
ADD_SUBDIRECTORY(rendertarget)
