CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(emscripten_tests)

SET(LibSL_DIR $ENV{LIBSL_DIR})
FIND_PACKAGE(LibSL)

INCLUDE_DIRECTORIES( ${LIBSL_INCLUDE_DIR} )

INCLUDE_DIRECTORIES(../..)
LINK_DIRECTORIES(${LIBSL_BINARY_DIR}) 

IF (LIBSL_USE_GLUX)
ADD_DEFINITIONS(-DUSE_GLUX)
IF(NOT WIN32)
ADD_DEFINITIONS(-DGL_ARB_multitexture=1)  # hack due to MESA headers including ARB_multitexture
ENDIF(NOT WIN32)
ENDIF (LIBSL_USE_GLUX)

# FIND_PACKAGE(OpenGL)

ADD_EXECUTABLE(test1 test1.cpp test1.fp test1.vp test1.h)
TARGET_LINK_LIBRARIES(test1 LibSL LibSL_gl ${OPENGL_LIBRARIES})

AUTO_BIND_SHADERS( test1 )

