CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(imagedit)

SET(IMAGEEDIT_SOURCES 
imageedit.cpp
)
		
SET(IMAGEEDIT_HEADERS 
)

INCLUDE_DIRECTORIES(../..)
LINK_DIRECTORIES(${LIBSL_BINARY_DIR}) 

ADD_EXECUTABLE(imagedit ${IMAGEEDIT_SOURCES})
TARGET_LINK_LIBRARIES(imagedit LibSL LibSL_linalg)

IF(WIN32)
INSTALL(PROGRAMS "${CMAKE_CURRENT_BINARY_DIR}/\${CMAKE_INSTALL_CONFIG_NAME}/imagedit.exe" DESTINATION ${CMAKE_SOURCE_DIR}/bin)
ELSE(WIN32)
INSTALL(PROGRAMS "${CMAKE_CURRENT_BINARY_DIR}/imagedit" DESTINATION ${CMAKE_SOURCE_DIR}/bin)
ENDIF(WIN32)

