CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(smoothmesh)

SET(SOURCES 
smoothmesh.cpp
)
		
SET(HEADERS 
)

INCLUDE_DIRECTORIES(../..)
LINK_DIRECTORIES(${LIBSL_BINARY_DIR}) 

ADD_EXECUTABLE(smoothmesh ${SOURCES})
IF(WIN32)

TARGET_LINK_LIBRARIES(smoothmesh LibSL)
INSTALL(PROGRAMS "${CMAKE_CURRENT_BINARY_DIR}/\${CMAKE_INSTALL_CONFIG_NAME}/smoothmesh.exe" DESTINATION ${CMAKE_SOURCE_DIR}/bin)

ELSE(WIN32)

TARGET_LINK_LIBRARIES(smoothmesh LibSL)
INSTALL(PROGRAMS "${CMAKE_CURRENT_BINARY_DIR}/smoothmesh" DESTINATION ${CMAKE_SOURCE_DIR}/bin)
ENDIF(WIN32)
