CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(uvatlas)

IF(WIN32)

SET(UVATLAS_SOURCES 
uvatlas.cpp
)
		
SET(UVATLAS_HEADERS 
)

INCLUDE_DIRECTORIES(
	../..
	$ENV{DXSDK_DIR}/Include
	$ENV{DXSDK_DIR}/Samples/C++/DXUT/Core
)
LINK_DIRECTORIES(${LIBSL_BINARY_DIR}) 

ADD_EXECUTABLE(uvatlas ${UVATLAS_SOURCES})

SET_TARGET_PROPERTIES(uvatlas PROPERTIES COMPILE_FLAGS "-D_UNICODE -DUNICODE")

TARGET_LINK_LIBRARIES(uvatlas 
	LibSL_d3d 
	$ENV{DXSDK_DIR}/lib/x86/d3d9.lib 
	$ENV{DXSDK_DIR}/lib/x86/d3dx9.lib
	$ENV{DXSDK_DIR}/lib/x86/dxerr.lib
	comctl32.lib 
	$ENV{DXSDK_DIR}/Samples/C++/DXUT/Core/Release/DXUT.lib)

INSTALL(PROGRAMS "${CMAKE_CURRENT_BINARY_DIR}/\${CMAKE_INSTALL_CONFIG_NAME}/uvatlas.exe" DESTINATION ${CMAKE_SOURCE_DIR}/bin)

ENDIF(WIN32)
